--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -1,5 +1,8 @@
 name: Autograding Tests
-'on': {}
+'on': 
+  - push
+  - workflow_dispatch
+  - repository_dispatch
 permissions:
   checks: write
   actions: read
